[package]
name = "media_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
aws-credential-types = "1.2.13"
aws-sdk-s3 = "1.124.0"
aws-config = "1.8.14"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
dashmap = "6"
async-stream = "0.3"
futures-core = "0.3"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
